--- a/faq/common-questions/what-is-googletest.mdx
+++ b/faq/common-questions/what-is-googletest.mdx
@@ -1,213 +1,163 @@
 ---
 title: "What is GoogleTest and GoogleMock?"
-description: "An overview of GoogleTest's core purpose, how it relates to GoogleMock, and the primary value it brings to C++ test development. Clarifies the consolidation of both libraries and the benefits for developers seeking structured and powerful testing tools."
+description: "Learn the core purpose and features of GoogleTest and GoogleMock, including what makes them popular choices for C++ testing. This page highlights who should use them and in what scenarios, helping users quickly determine fit for their project."
 ---
 
 # What is GoogleTest and GoogleMock?
 
-## Overview
-
-GoogleTest and GoogleMock are Google’s open-source C++ libraries designed to empower developers with powerful, structured, and reusable tools for writing reliable and maintainable tests. While GoogleTest is a comprehensive testing framework focused on writing and running unit tests, GoogleMock complements it by providing facilities for creating and managing mock objects to isolate dependencies and flexibly verify interactions.
-
-This page introduces the core purpose of GoogleTest, explains its relationship with GoogleMock, and highlights the key benefits they bring when used together in C++ test development.
+GoogleTest and GoogleMock together form Google's comprehensive, platform-independent **C++ testing and mocking framework** designed to help developers write reliable and maintainable tests for their C++ codebases. This page introduces their core purpose, primary features, and typical scenarios where they shine, helping you decide if they match your project's testing needs.
 
 ---
 
-## What is GoogleTest?
+## Understanding GoogleTest
 
-GoogleTest is a portable and fully-featured C++ testing framework that enables developers to write automated, repeatable, and organized tests for C++ codebases. It follows the widely-adopted xUnit architecture familiar to users of JUnit and similar frameworks.
+GoogleTest is a feature-rich, open-source **testing framework** for C++ designed with portability, ease-of-use, and robustness in mind. It supports the full spectrum of testing types beyond just unit tests, suitable for any kind of automated test you want to write in C++.
 
-### Core Purpose
+### Why Choose GoogleTest?
 
-- To provide a simple yet powerful system for defining and running tests that validate correctness.
-- To help ensure tests are independent, repeatable, and fast, facilitating efficient debugging and higher code quality.
-- To organize tests into suites and fixtures, improving maintainability.
-- To give detailed failure reports, supporting both fatal and non-fatal assertions.
-- To abstract away tedious bookkeeping tasks from test authors.
+- **Independence & Repeatability:** GoogleTest runs each test independently, eliminating flaky tests caused by shared state or order dependencies, and making debugging faster and more straightforward.
+- **Logical Organization:** Tests are grouped into *test suites* that mirror your code structure, making it easier to maintain and understand tests as your code grows.
+- **Cross-Platform Support:** Works seamlessly across Linux, Windows, and Mac, supporting various compiler setups, with or without exceptions.
+- **Informative Failures:** When a test fails, GoogleTest provides detailed diagnostics, including source location and context, without stopping at the first failure. Non-fatal failure reporting aids in catching multiple bugs in a single run.
+- **Automation-Friendly:** Automatically discovers and runs all defined tests without requiring manual registration.
+- **Fast Execution:** Supports sharing expensive resources across tests, minimizing setup/teardown overhead.
 
-GoogleTest supports cross-platform usage, running on Linux, Windows, and macOS with a consistent developer experience.
+### Core Concepts
 
-### Key Features
+- **Assertions:** Statements that verify conditions; they can fail fatally (abort current function) or non-fatally (allow test continuation).
+- **Tests:** Functions that contain assertions to verify code behavior; if any assertion fails fatally or the test crashes, the test fails.
+- **Test Suites:** Logical groupings of tests that resemble the structure of the code under test.
+- **Test Fixtures:** Classes that allow sharing setup and teardown code and common objects between multiple tests within a test suite.
 
-- **Test Suites and Fixtures:** Group related tests and share setup/teardown code.
-- **Rich Assertions:** Over 30 assertion macros for various checking needs with customizable messages.
-- **Test Discovery and Execution:** Automatically registers tests and runs all tests in an executable with `RUN_ALL_TESTS()`.
-- **Typed, Parameterized, and Value-Parameterized Tests:** Test multiple types and data inputs with minimal code repetition.
-- **Thread Safety:** Thread-safe on systems with pthreads available.
+### Typical Workflow
 
-### How GoogleTest Works - At a Glance
+1. **Write assertions** in test functions using macros like `EXPECT_EQ`, `ASSERT_TRUE`, etc., to verify your code’s behavior.
+2. **Group related tests** into test suites using `TEST()` or `TEST_F()` macros.
+3. Optionally, create **test fixtures** by deriving from `testing::Test` to share setup among multiple tests.
+4. Run your tests using `RUN_ALL_TESTS()`, which reports success/failure via return codes.
 
-When you write tests using GoogleTest, you:
+### Example
 
-1. Define tests with the `TEST()` macro or `TEST_F()` for fixtures.
-2. Use assertions like `EXPECT_EQ()` and `ASSERT_TRUE()` to verify code behavior.
-3. Compile these tests into a binary linked against GoogleTest libraries.
-4. Run the tests, typically via a simple main function or by linking with the provided `gtest_main` library.
+```c++
+// Simple function under test.
+int Factorial(int n);
 
-This allows you to uncover issues early and systematically.
-
-#### Example: A Simple Test
-
-```cpp
-#include <gtest/gtest.h>
-
-// Function to test
-int Factorial(int n) {
-  return n <= 1 ? 1 : n * Factorial(n - 1);
-}
-
-// Tests
+// Tests factorial of 0.
 TEST(FactorialTest, HandlesZeroInput) {
   EXPECT_EQ(Factorial(0), 1);
 }
 
+// Tests factorial of positive numbers.
 TEST(FactorialTest, HandlesPositiveInput) {
+  EXPECT_EQ(Factorial(1), 1);
+  EXPECT_EQ(Factorial(2), 2);
   EXPECT_EQ(Factorial(3), 6);
-  EXPECT_EQ(Factorial(5), 120);
-}
-
-int main(int argc, char **argv) {
-  testing::InitGoogleTest(&argc, argv);
-  return RUN_ALL_TESTS();
 }
 ```
 
----
-
-## What is GoogleMock?
-
-GoogleMock (or gMock) is a complementary C++ library dedicated to creating and managing mock objects within your tests.
-
-### Purpose and Benefits
-
-- Allows precise and declarative specification of mocked classes and methods with `MOCK_METHOD` macros.
-- Provides a rich language for setting *expectations* on mocked method calls, including argument matching, call order, call counts, and return behaviors.
-- Supports flexible behavior control using actions and sequences.
-- Integrates seamlessly with GoogleTest’s assertion mechanisms and test execution flows.
-
-### Why Use GoogleMock?
-
-- To isolate your code under test by mocking out dependencies (e.g., interfaces, external systems).
-- To validate interactions and ensure code behaves correctly under various scenarios.
-- To simulate error conditions and rare cases that are difficult to produce with real objects.
-
-### Example: Defining and Using a Mock
-
-```cpp
-#include <gmock/gmock.h>
-#include <gtest/gtest.h>
-
-class FooInterface {
-public:
-  virtual ~FooInterface() = default;
-  virtual int GetValue(int x) = 0;
-};
-
-class MockFoo : public FooInterface {
-public:
-  MOCK_METHOD(int, GetValue, (int x), (override));
-};
-
-TEST(FooTest, ReturnsExpectedValue) {
-  MockFoo mock;
-  EXPECT_CALL(mock, GetValue(5))
-      .WillOnce(testing::Return(10));
-
-  EXPECT_EQ(mock.GetValue(5), 10);
-}
-```
-
-This declarative approach makes your tests clearer and easier to maintain.
+This example clearly groups related tests and uses assertions that output detailed error info if they fail.
 
 ---
 
-## How GoogleTest and GoogleMock Relate
+## Understanding GoogleMock
 
-- GoogleMock *builds upon* GoogleTest and depends on its core functionality.
-- GoogleMock initialization also initializes GoogleTest internally, so there is no need to call `InitGoogleTest()` separately when using mocks.
-- Both libraries are distributed together and built as a single unified project, simplifying installation and usage.
-- Tests can simultaneously contain regular GoogleTest unit tests and GoogleMock mock-based tests.
+GoogleMock is a powerful **mocking framework** built on top of GoogleTest, allowing you to create mock objects and set expectations to simulate and verify interactions in complex C++ codebases.
 
----
+While this page focuses on the overview and use cases, GoogleMock tightly integrates with GoogleTest, enabling you to define mock classes and methods with macros, specify expected calls (`EXPECT_CALL`), and control their behavior with argument matchers and actions.
 
-## Benefits of Using GoogleTest and GoogleMock Together
+### Who Should Use GoogleMock?
 
-- **Comprehensive Testing Environment:** From simple unit tests to complex interaction and behavior testing.
-- **Reduced Boilerplate:** The libraries handle the tedious mechanics of test registration, mock verifications, and result reporting.
-- **Powerful Assertions and Expectations:** Meaningful failure messages and flexible expectation definitions improve diagnosis and reliability.
-- **Cross-Platform and Toolchain Support:** Support for all major platforms and compilers with modern C++ standards (C++17 required).
+- Developers writing tests for classes or components interacting with complex dependencies.
+- Teams wanting to isolate units under test by mocking external interfaces.
+- Projects requiring strict enforcement of expected method calls and arguments.
 
 ---
 
-## Getting Started with GoogleTest and GoogleMock
+## When to Use GoogleTest and GoogleMock
 
-1. **Install and Build:** GoogleTest provides a straightforward CMake build system. You can build both libraries together or selectively build just GoogleTest.
+### GoogleTest is ideal when you want to:
 
-```bash
-git clone https://github.com/google/googletest.git
-cd googletest
-mkdir build && cd build
-cmake .. # Builds both GoogleTest and GoogleMock by default
-make
-sudo make install
-```
+- Write **unit** or **integration tests** for C++ code.
+- Make running tests automatic and consistent across platforms.
+- Gain **detailed diagnostics** on test failures.
+- Organize tests in suites and use fixtures for reusable setups.
+- Leverage advanced features like parameterized, value-parameterized, and typed tests.
 
-To build only GoogleTest:
+### GoogleMock is ideal when you want to:
 
-```bash
-cmake .. -DBUILD_GMOCK=OFF
-```
-
-2. **Integrate:** Add GoogleTest/GoogleMock to your existing CMake project via `find_package` or as a subdirectory.
-3. **Write Tests:** Use `#include <gtest/gtest.h>` for basic tests and `#include <gmock/gmock.h>` when mocking.
-4. **Run Tests:** Link with `gtest_main` or `gmock_main` for default `main()` implementations.
+- Test code that depends on **external components, interfaces, or hardware** without requiring the actual dependencies.
+- Verify that your code **interacts correctly** with collaborators: method calls, call order, number of invocations, etc.
+- Test asynchronous or event-driven code by controlling mock behavior precisely.
 
 ---
 
-## Summary of Key Points
+## Key Benefits
 
-| Feature                      | GoogleTest                                 | GoogleMock                           |
-|------------------------------|-------------------------------------------|-------------------------------------|
-| Focus                        | Writing and running tests                   | Defining and verifying mock objects  |
-| Main API                     | `TEST()`, `TEST_F()`, assertions           | `MOCK_METHOD()`, `EXPECT_CALL()`    |
-| Setup                       | `InitGoogleTest()` and `RUN_ALL_TESTS()`   | `InitGoogleMock()` (includes InitGoogleTest) |
-| Use in `main()`             | Link with `gtest_main` or provide your own | Link with `gmock_main` (includes main) |
-| Cross-platform support       | Linux, Windows, Mac, Embedded Platforms    | Same                               |
+| Benefit                           | GoogleTest                                    | GoogleMock                            |
+|---------------------------------|----------------------------------------------|-------------------------------------|
+| Automatic test discovery         | ✅ Generates and runs discovered tests        | ✅ Integrates seamlessly with tests   |
+| Portable across platforms        | ✅ Linux, Windows, Mac                         | ✅ Same platform support              |
+| Rich assertions and matchers    | ✅ Wide variety and extensibility              | ✅ Matchers for arguments             |
+| Supports fixtures and parameterization | ✅ Test fixtures, typed and value-parameterized tests | ✅ Use with fixtures and test patterns |
+| Detailed failure diagnostics    | ✅ File, line, message, stack trace            | ✅ Failure messages for unmet expectations |
+| Death tests support             | ✅ Verify program abort and termination errors | N/A (use within tests)                |
+| Mock method definition          | N/A                                           | ✅ MOCK_METHOD macro to define mocks  |
+| Flexible mock behavior          | N/A                                           | ✅ Specify default actions, call counts, sequences |
+
+---
+
+## Getting Started and Integration
+
+- Include `#include <gtest/gtest.h>` for GoogleTest functionality.
+- Include `#include <gmock/gmock.h>` when using GoogleMock.
+- Write tests using `TEST()`, `TEST_F()`, and for parameterized scenarios use `TEST_P()`, `INSTANTIATE_TEST_SUITE_P()`.
+- Define mocks extending interfaces and use `EXPECT_CALL` to set expectations.
+- Initialize and run tests with `testing::InitGoogleTest(&argc, argv); return RUN_ALL_TESTS();` in `main()`.
+
+For detailed introductory material, start with the [GoogleTest Primer](https://google.github.io/googletest/primer.html), followed by the [Testing Reference](https://google.github.io/googletest/reference/testing.md). For mocking, explore the [GoogleMock README](https://github.com/google/googletest/tree/main/googlemock) and guides.
+
+---
+
+## Practical Scenarios
+
+- **Continuous Integration:** Use GoogleTest and GoogleMock for automated regression tests, supported by XML/JSON reports for CI systems.
+- **Testing complex C++ libraries:** Write isolated tests with fixtures and mocks to validate internal logic thoroughly.
+- **TDD (Test-driven Development):** Rapidly iterate development and testing using GoogleTest's fast feedback and detailed failure reports.
+- **Cross-platform development:** Write portable tests that work the same everywhere without modification.
+
+---
+
+### What Makes GoogleTest and GoogleMock Popular?
+
+- Stability and longevity as a Google open source project.
+- Strong community support and extensive documentation.
+- Rich feature set that covers most C++ testing needs.
+- Easy learning curve for newcomers familiar with xUnit-style testing.
+- Robust failure reporting and informative diagnostics.
 
 ---
 
 ## Additional Resources
 
-- [GoogleTest Primer](primer.md): Learn how to write basic tests.
-- [GoogleMock for Dummies](gmock_for_dummies.md): Step-by-step guide to mocking.
-- [Mocking Reference](api_reference/mocking_api/mock_object_basics.md): API documentation for mocks.
-- [Installation Instructions](getting-started/prerequisites-installation/installation-instructions.md): Platform-specific setup.
-- [Feature Overview](overview/architecture-features-integration/feature-overview.md): Complete functional summary.
+- [GoogleTest Primer](https://google.github.io/googletest/primer.html) – In-depth fundamentals
+- [Testing Reference](https://google.github.io/googletest/reference/testing.md) – API details
+- [Assertions Reference](https://google.github.io/googletest/reference/assertions.md) – Full list of assertion macros
+- [Advanced Topics](https://google.github.io/googletest/advanced.html) – Parameterized tests, death tests, event listeners
+- [GoogleMock Cheat Sheet](https://google.github.io/googletest/gmock_cheat_sheet.html) – Quick reference for mocking
+- [GoogleMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html) – Detailed mocking patterns and tips
+- [FAQ](https://google.github.io/googletest/faq.html) – Answers to common issues
+
+
+<Callout>
+Note: This page focuses on the core purpose and high-level features to help you decide if GoogleTest and GoogleMock fit your project. For detailed tutorials and API references, consult the resources linked above.
+</Callout>
 
 ---
 
-## Troubleshooting & Common Questions
+## Summary
 
-<AccordionGroup title="FAQ - What is GoogleTest and GoogleMock?">
-<Accordion title="Can I use GoogleTest without GoogleMock?">
-Yes. GoogleTest can be used independently as a full-featured unit testing framework without any dependency on GoogleMock. GoogleMock is optional and only required if you need mocking capabilities.
-</Accordion>
-<Accordion title="Is GoogleMock included when I build GoogleTest?">
-By default, building GoogleTest via CMake includes GoogleMock as well. You can disable it with the option `-DBUILD_GMOCK=OFF` if you want only the core testing library.
-</Accordion>
-<Accordion title="Do I have to write my own main() function to run tests?">
-Generally no. Linking with the provided `gtest_main` (for GoogleTest) or `gmock_main` (for GoogleMock) libraries includes appropriate main functions that initialize and run all tests.
-</Accordion>
-<Accordion title="What C++ standard do I need to use?">
-GoogleTest and GoogleMock require a compiler supporting at least C++17.
-</Accordion>
-<Accordion title="How do GoogleTest and GoogleMock handle thread safety?">
-GoogleTest is thread-safe on systems where pthread is available. GoogleMock is also designed with thread safety in mind but some operations like setting expectations concurrently may not be safe.
-</Accordion>
-</AccordionGroup>
+GoogleTest and GoogleMock empower C++ developers to write robust, efficient, and maintainable test suites. GoogleTest excels at test organization, rich assertion support, and cross-platform execution, while GoogleMock adds powerful mocking capabilities to isolate interactions and verify complex behaviors.
+
+To determine fit for your project, consider your need for automated, detailed testing with easy integration and cross-platform support, along with advanced mocking for dependencies.
 
 ---
-
-<Info>
-For comprehensive guidance, always start with the GoogleTest Primer for foundational concepts and then move to the Mocking for Dummies guide to incorporate mocks. Refer to API references for more detailed usage insights.
-</Info>
