--- a/faq/common-questions/supported-platforms.mdx
+++ b/faq/common-questions/supported-platforms.mdx
@@ -1,255 +1,189 @@
 ---
 title: "Which platforms and compilers are supported?"
-description: "Outlines supported C++ standards, compilers, and operating systems. Helps users verify compatibility and avoid platform-specific issues during setup."
+description: "See which operating systems, compilers, and build tools are officially supported by GoogleTest, ensuring you can deploy with confidence and avoid preventable integration issues."
 ---
 
-# Supported Platforms and Compilers for GoogleTest and GoogleMock
+# Which platforms and compilers are supported?
 
-This page details the supported C++ standards, compilers, and operating systems for successful usage of GoogleTest and GoogleMock. Understanding this compatibility ensures smooth installation, build, and test execution without platform-specific issues.
-
----
-
-## 1. Overview of Supported Platforms
-
-GoogleTest follows Google's [Foundational C++ Support Policy](https://opensource.google/documentation/policies/cplusplus-support). Below are the primary aspects of platform support:
-
-- **Operating Systems**
-  - Linux (including Android)
-  - macOS and iOS
-  - Windows (Desktop editions, MinGW, Windows Mobile, and related variants)
-  - BSD variants (FreeBSD, OpenBSD, NetBSD, DragonFlyBSD)
-  - Other Unix-like systems: Solaris, AIX, HP-UX, QNX
-  - Embedded platforms such as ESP8266, ESP32, and NRF52 with some limitations
-
-- **Compilers**
-  - GCC versions supporting C++17
-  - Clang versions supporting C++17
-  - Microsoft Visual Studio 2017 (version 15.3) or later
-  - Other compilers supporting the C++17 standard
-
-- **C++ Standard**
-  - GoogleTest requires **C++17** or later to build and operate correctly.
+GoogleTest is designed as a portable, robust C++ testing and mocking framework supporting a broad range of platforms and compilers. This page details the officially supported operating systems, compiler versions, threading capabilities, and tooling requirements, enabling you to confidently plan your testing workflow and avoid preventable integration issues.
 
 ---
 
-## 2. Operating System Compatibility Details
+## Supported Operating Systems
 
-| Platform        | Notes                                                                                          |
-|-----------------|------------------------------------------------------------------------------------------------|
-| **Linux**       | Full support including desktop and server distributions. Also supports Linux Android variants. |
-| **Windows**     | Supported with variations for Desktop, Mobile, and CMake integration. Requires MSVC 2017+.     |
-| **macOS / iOS** | Supported with Xcode; macOS typically uses CMake for builds.                                  |
-| **BSD Systems** | FreeBSD, OpenBSD, NetBSD, DragonFlyBSD supported, but users may need to verify pthread support. |
-| **Others**      | Solaris, AIX, HP-UX, and QNX supported with some platform-specific conditions.                |
-| **Embedded**    | ESP8266, ESP32, NRF52 supported. Some system calls, file systems, and threading features may be limited. |
+GoogleTest supports a wide variety of platforms commonly used in industry and open source development. Here are the officially supported operating systems:
 
-### Platform-Specific Considerations
+- **Linux** (multiple distributions)
+- **Windows** (including Desktop, MinGW, Windows Store, Windows Phone, and Mobile variants)
+- **macOS**
+- **FreeBSD**
+- **OpenBSD**
+- **NetBSD**
+- **Solaris**
+- **AIX**
+- **Cygwin**
+- **GNU Hurd**
+- **GNU/kFreeBSD**
+- **DragonFly BSD**
+- **Haiku**
+- **QNX**
+- **z/OS**
+- **Fuchsia**
+- **Embedded platforms such as ESP8266, ESP32, NXP QN9090, NRF52, XTENSA, QuRT**
 
-- **Threading**: GoogleTest depends on pthreads where available for thread safety and death test support.
-- **File System**: Platforms must provide file system support for file I/O; embedded systems without file systems may have limited functionality.
-- **Death tests**: Supported on platforms that allow process forking or spawning and have filesystem support.
+> Platforms like Fuchsia are supported but not officially maintained in all aspects.
 
-<Info>
-On Windows with Visual Studio, ensure that the runtime library linkage matches GoogleTest's settings to avoid linker errors. Use the CMake option `gtest_force_shared_crt` to align runtime linkage.
-</Info>
+For detailed OS detection, GoogleTest internally uses the `GTEST_OS_*` macros (e.g., `GTEST_OS_LINUX`, `GTEST_OS_WINDOWS`, `GTEST_OS_MAC`), automatically defined during compilation to enable appropriate platform-specific behavior.
+
+## Supported Compiler Versions
+
+To build and run GoogleTest effectively, an environment supporting at least **C++17** is required. Supported compilers include:
+
+- **GCC** 7.0 and above
+- **Clang** 3.4.1 and above
+- **Microsoft Visual C++** 2017 Update 3 (MSVC >= 19.11)
+- **Intel C++ Compiler:** Compatible versions supporting C++17 features
+- **SunPro (Oracle Solaris Studio)**: recent versions with C++17 support
+- **IBM VisualAge C++** 9.0 or later
+- **HP aCC**: compilers supporting C++17
+
+Older compilers lacking C++17 support are not compatible.
+
+GoogleTest detects compiler capabilities such as:
+
+- Exception support
+- Runtime Type Information (RTTI)
+- Threading and synchronization primitives
+
+and adapts internally with corresponding macros like `GTEST_HAS_EXCEPTIONS`, `GTEST_HAS_RTTI`, and `GTEST_IS_THREADSAFE`.
+
+## Threading and Concurrency Support
+
+GoogleTest is designed to be thread-safe on platforms where appropriate threading primitives are available.
+
+- On Unix-like platforms, GoogleTest detects `pthread` availability and enables thread safety (flag `GTEST_HAS_PTHREAD`).
+- On Windows Desktop, native Windows threading APIs are used.
+- On some embedded or mobile platforms (e.g., Windows Mobile, Windows Phone, embedded RTOS like QuRT), threading support is limited or unavailable.
+
+By default, GoogleTest attempts to auto-detect threading availability.
+You can override this detection by defining the `GTEST_HAS_PTHREAD` build macro to 1 or 0.
+
+If you use GoogleTest in a multi-threaded environment, ensure your platform has pthread or native threading support and that the corresponding macro `GTEST_IS_THREADSAFE` evaluates to 1.
+
+## C++ Standard Requirements
+
+GoogleTest requires a compiler environment that supports **C++17** features. If your build system does not specify the C++ standard, you may need to add flags manually (e.g., `-std=c++17` for GCC/Clang or `/std:c++17` for MSVC).
+
+The C++17 requirement enables GoogleTest to use language features for improved safety, portability, and maintainability.
+
+## Build Tools and Build System Integration
+
+GoogleTest supports several popular build systems:
+
+- **CMake**
+  - GoogleTest provides CMake scripts that build both GoogleTest and GoogleMock.
+  - Minimum required CMake version: 3.14 for FetchContent and `FetchContent_MakeAvailable()` functionality.
+  - Recommended usage patterns include standalone projects, integration via `add_subdirectory()`, or FetchContent-based downloading.
+
+- **Bazel**
+  - Full Bazel build files are provided.
+  - The build rules support platform and compiler-specific flags and dependencies.
+
+- Support for manual or legacy build tools depends on configuring compiler and linker flags to accommodate threading and platform detection macros.
+
+## Supported Platforms Summary Table
+
+| Platform/OS    | Compiler Examples                  | Threading Support  | Notes                               |
+|----------------|----------------------------------|--------------------|-----------------------------------|
+| Linux          | GCC ≥7, Clang ≥3.4.1             | pthreads           | Widely tested and recommended      |
+| Windows        | MSVC 2017 Update 3+              | Windows threading  | Support includes Desktop, MinGW   |
+| macOS          | Clang (Xcode)                    | pthreads           | Officially supported               |
+| FreeBSD        | GCC, Clang                      | pthreads           | Supported                        |
+| OpenBSD        | GCC, Clang                      | pthreads           | Supported                        |
+| NetBSD         | GCC, Clang                      | pthreads           | Supported                        |
+| Solaris        | SunPro C++                      | pthreads           | Supported                        |
+| AIX            | IBM XL C++                     | pthreads           | Supported                        |
+| Cygwin         | GCC, Clang                      | pthreads           | Supported                        |
+| Fuchsia        | Clang                          | pthreads           | Experimental support               |
+| Embedded       | Various Embedded Toolchains      | Usually none        | Limited but supported for testing |
+
+## Common Issues Related to Platform Support
+
+- **Threading Detection Fails:** Define `-DGTEST_HAS_PTHREAD=1` or `=0` explicitly to force correct detection.
+- **RTTI or Exceptions Disabled:** Check your compiler settings if GoogleTest reports missing RTTI or exceptions.
+- **Unsupported Platforms:** GoogleTest may compile but lack some features or fail at runtime.
+
+## Tips for Ensuring Compatibility
+
+- Always use a supported compiler version with full C++17 support.
+- Confirm your OS platform is among the supported list.
+- Use the provided CMake or Bazel build files to prevent missing required flags or incorrectly set macros.
+- For unsupported embedded platforms, consider customizing GoogleTest via `custom/gtest-port.h` as documented.
+
+## Customization and User Overrides
+
+GoogleTest exposes several customization points to adapt platform-specific behavior:
+
+- Defining custom macros in `custom/gtest-port.h`.
+- Overriding platform-specific implementations if necessary.
+
+Refer to [Customization Points](googletest/include/gtest/internal/custom/README.md) for advanced integration needs.
+
+## References
+
+- [GoogleTest System Requirements](https://github.com/google/googletest/blob/main/docs/prerequisites.md)
+- [Platform Detection Macros](googletest/include/gtest/internal/gtest-port-arch.h)
+- [CMake Integration Guide](https://github.com/google/googletest/blob/main/README.md#build-with-cmake)
 
 ---
 
-## 3. Compiler Requirements
+## Summary
 
-### Minimum Supported Versions and Features
+Understanding the supported platforms and compiler environments is crucial for successfully integrating GoogleTest into your development workflow. This guide ensures that you choose compatible OSes, compilers, and build tools to leverage GoogleTest fully with optimal thread-safety, exception handling, and feature support.
 
-- **C++17 Support** is mandatory. Users must enable this standard explicitly if their projects default to older standards.
+For best results, use supported compiler versions with C++17 support on officially supported platforms and integrate using the supplied build scripts and macros.
 
-- **MSVC (Microsoft Visual C++)**
-  - Minimum: Visual Studio 2017 Update 3 (MSVC Version 14.16, _MSC_VER >= 1911)
-  - Required to compile GoogleMock as well.
+---
 
-- **GCC**
-  - Versions that fully support C++17 (generally GCC 7 and later).
+<AccordionGroup title="Frequently Asked Questions about Platform Support">
+<Accordion title="What operating systems does GoogleTest support?">
+GoogleTest supports Linux, Windows, macOS, FreeBSD, OpenBSD, NetBSD, Solaris, AIX, Cygwin, Fuchsia, and multiple embedded platforms like ESP8266 and ESP32.
+</Accordion>
+<Accordion title="Which compilers work with GoogleTest?">
+GoogleTest requires a compiler with C++17 support such as GCC 7+, Clang 3.4.1+, or MSVC 2017 Update 3+. Other compilers like Intel C++ and SunPro are also supported if they provide C++17 compatibility.
+</Accordion>
+<Accordion title="Is GoogleTest thread-safe on all platforms?">
+Thread safety is guaranteed where pthreads or equivalent native OS threading is available. On Windows Desktop, native synchronization is used. Some mobile and embedded platforms may lack thread safety.
+</Accordion>
+<Accordion title="How can I force GoogleTest to recognize threading or other platform features?">
+Define the relevant macros such as `-DGTEST_HAS_PTHREAD=1` or `0` in your build to override autodetection if necessary.
+</Accordion>
+</AccordionGroup>
 
-- **Clang**
-  - Versions supporting C++17 (Clang 5.0 or later is recommended).
+---
 
-- **Other compilers**
-  - Must comply with C++17, including support for exceptions, RTTI, and threading to some extent.
-
-### CMake Version
-
-- GoogleTest requires **CMake 3.14 or newer** to use the recommended `FetchContent_MakeAvailable()` approach.
-
+<Check>
+Ensure your build environment uses supported compiler versions and target OS platforms before integrating GoogleTest to minimize compatibility issues.
+</Check>
 
 <Note>
-Building GoogleMock, which extends GoogleTest, additionally requires MSVC 2015 or later.
+Refer to the official [docs/platforms.md](https://github.com/google/googletest/blob/main/docs/platforms.md) for updates on supported tools and versions.
 </Note>
 
 ---
 
-## 4. Threading and Library Support
+## Related Documentation
 
-- **Pthreads**
-  - GoogleTest automatically detects pthread availability.
-  - Users can force pthread support with the compiler flag `-DGTEST_HAS_PTHREAD=1` or disable with `-DGTEST_HAS_PTHREAD=0`.
-  - On platforms without pthreads (e.g., some embedded), GoogleTest operates single-threaded with degraded functionality.
+- [GoogleTest Primer](docs/primer.md) — Introductory guide including basic usage
+- [Installation and Setup](guides/getting-started/installation-and-setup.md) — Detailed instructions for building and integrating GoogleTest
+- [Integration with Build Systems and CI](overview/integration-ecosystem/integration-with-build-and-ci.md) — Best practices for continuous integration
+- [Portability and Integration](concepts/advanced-principles/portability-and-integration.md) — Deep dive into platform compatibility and environment abstractions
 
-- **Exceptions and RTTI**
-  - GoogleTest detects whether exceptions and Run-Time Type Information (RTTI) are enabled.
-  - Some features such as typed tests require RTTI.
+## External Resources
 
-- **Shared Libraries**
-  - GoogleTest and GoogleMock can be built as static or shared libraries.
-  - On Windows, runtime linkage mismatch errors are common; use CMake options to control linkage.
+- [Official GoogleTest GitHub Repository](https://github.com/google/googletest)
+- [CMake Official Website](https://cmake.org)
 
 ---
 
-## 5. Platform-Specific and Build Notes
-
-### Windows
-
-- Visual Studio project files (`.sln`, `.vcproj`) are generated by CMake.
-- By default, runtime libraries are linked statically; conflicts arise if your project uses dynamic linkage.
-- Use `cmake .. -Dgtest_force_shared_crt=ON` to align GoogleTest runtime with your project.
-
-### macOS
-
-- Xcode project files can be generated by CMake.
-- Make sure to use a modern compiler supporting C++17.
-
-### Linux
-
-- Typical `make` flow after CMake generation.
-- Pthread flags are handled automatically by GoogleTest's CMake.
-
-### Embedded Platforms
-
-- Some GoogleTest capabilities (e.g., file system operations, environment variables) might be limited.
-- Threading support depends on platform.
-- Refer to the [Supported Platforms](https://github.com/google/googletest/blob/main/docs/platforms.md) for more details.
-
----
-
-## 6. Verification and Troubleshooting
-
-### Verifying Setup
-
-- Confirm compiler compatibility:
-
-```bash
-<compiler> --version
-# or
-clang++ --version
-```
-
-- Verify C++17 is enabled (often `-std=c++17` or equivalent).
-
-- Check CMake version:
-
-```bash
-cmake --version
-```
-
-- Run sample GoogleTest examples following the [Quick Validation & Sample Tests](https://github.com/google/googletest/blob/main/docs/getting-started/configuration-initial-run/quick-validation.md) guide.
-
-### Common Issues
-
-- **Linker errors on Windows** due to runtime library mismatch: use `gtest_force_shared_crt` option.
-
-- **Compilation errors due to lacking C++17**: explicitly enable the correct standard in your build.
-
-- **Missing pthreads**: manually add pthread linkage if you use custom build scripts.
-
-- **Unsupported platforms or embedded targets**: refer to platform documentation and consider disabling non-supported features.
-
----
-
-## 7. Additional Resources
-
-- [Installation Instructions](https://github.com/google/googletest/blob/main/docs/getting-started/prerequisites-installation/installation-instructions.md)
-- [Supported Platforms & Integration](https://github.com/google/googletest/blob/main/docs/overview/architecture-features-integration/platforms-and-integration.md)
-- [System Requirements & Supported Platforms](https://github.com/google/googletest/blob/main/docs/getting-started/prerequisites-installation/system-requirements.md)
-- [Troubleshooting Installation & Configuration](https://github.com/google/googletest/blob/main/docs/getting-started/troubleshooting-common-issues/common-setup-issues.md)
-
----
-
-For a visual overview of how platform support fits into the GoogleTest architecture and build system integration, see the [High-Level Architecture](https://github.com/google/googletest/blob/main/docs/overview/architecture-features-integration/high-level-architecture.md) page.
-
-
----
-
-### Diagram: Supported Platform and Compiler Flow
-
-```mermaid
-flowchart TD
-  A[User: Select Platform & Compiler] --> B{Platform Type}
-
-  subgraph "Supported OS"
-  B --> Linux["Linux (including Android)"]
-  B --> Mac["macOS / iOS"]
-  B --> Win["Windows (Desktop & variants)"]
-  B --> BSD["BSD Variants"]
-  B --> Others["Sun Solaris, AIX, HP-UX, QNX"]
-  B --> Embedded["Embedded (ESP, NRF, etc.)"]
-  end
-
-  subgraph "Compiler Requirements"
-  C[GCC 7+]
-  D[Clang 5+]
-  E[MSVC 2017 Update 3+]
-  F[Other C++17-compliant compilers]
-  end
-
-  Linux -->|Compatible| C
-  Linux -->|Compatible| D
-  Linux -->|Compatible| F
-
-  Mac -->|Compatible| D
-  Mac -->|Compatible| F
-
-  Win -->|Compatible| E
-  Win -->|Compatible| F
-
-  BSD -->|Compatible| C
-  BSD -->|Compatible| D
-  BSD -->|Compatible| F
-
-  Others -->|Depends| C
-  Others -->|Depends| D
-  Others -->|Depends| F
-
-  Embedded -->|Limited Support| E
-  Embedded -->|Limited Support| D
-
-  C --> G[Requires C++17 Enabled]
-  D --> G
-  E --> G
-  F --> G
-
-  G --> H{Build System Uses CMake}
-  H -->|Yes| I[Minimum CMake 3.14 Required]
-  H -->|No| J[Custom Build Requires Manual Setup]
-
-```
-
----
-
-## 8. Best Practices
-
-- Always verify compiler and CMake versions before starting.
-- Use GoogleTest’s provided CMake scripts for consistent build experience.
-- For Windows users, pay attention to runtime library linkage settings for MSVC.
-- On unsupported or embedded platforms, verify which GoogleTest features are functional.
-- Reference official GoogleTest platform support tables and documentation regularly.
-
----
-
-## 9. Summary
-
-This page empowers you to verify that your development environment— including OS, compiler, and build system— is compatible with GoogleTest and GoogleMock. Adhering to supported platforms and minimum compiler versions enables reliable, modern C++ testing with full feature access, including threading, exception handling, and cross-platform consistency.
-
----
-
-For further assistance or specialized platform support, consult the community forums and GitHub issues, or reach out via official GoogleTest channels.
-
----
-
-# End of Supported Platforms and Compilers Documentation
+This page forms a key foundation for developing and maintaining portable, reliable C++ test suites using GoogleTest by clarifying which environments are officially supported and tested.
